2010-07-09  Levi Bard  <levi@unity3d.com>

	* MonoDevelop.Ide/RootWorkspace.cs:
	  Implement less disk-intensive project autoupdate.

2010-07-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/SearchEntry.cs: taken out event
	  handler on destroy.

2010-07-08  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Components.Diff/Diff.cs:
	* MonoDevelop.Components/DropDownBoxListWindow.cs: Worked on
	  version control gui.

2010-07-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Removed unused
	  event handler (deletetolineend is handled by the text
	  editor).

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/PathBar.cs: Changed redrawing.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/PathBar.cs: Added bounds check.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/PathBar.cs: Improved resizing
	  behavior.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/PathBar.cs: fixed multi monitor
	  support.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/PathBar.cs: Path bar now supports a
	  right hand side.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/TextEditor.cs:
	* MonoDevelop.Ide.Gui/IBaseViewContent.cs:
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs:
	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs:
	* MonoDevelop.Ide.Gui/AbstractBaseViewContent.cs: Worked on
	  navigation panel/content interface.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/PathBar.cs: Added the ability to show
	  a separator inside a path.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWindow.cs: Fixed 'Bug
	  619800 - Auto-complete of nothing shouldn't auto-complete as
	  void'.
