@@ -1163,14 +1163,14 @@
 				_label = "Navigate _Back"
 				icon = "md-navigate-back"
 				defaultHandler = "MonoDevelop.Ide.Commands.NavigateBack"
-				shortcut = "Alt|Left"
+				shortcut = "Control|Alt|Left"
 				macShortcut= "Meta|Alt|Left"
 				_description = "Move to previous point in code navigation history"/>
 		<Command id = "MonoDevelop.Ide.Commands.NavigationCommands.NavigateForward"
 				_label = "Navigate _Forward"
 				icon = "md-navigate-forward"
 				defaultHandler = "MonoDevelop.Ide.Commands.NavigateForward"
-				shortcut = "Alt|Right"
+				shortcut = "Control|Alt|Right"
 				macShortcut= "Meta|Alt|Right"
 				_description = "Move to next point in code navigation history"/>
 		<Command id = "MonoDevelop.Ide.Commands.NavigationCommands.NavigateHistory"
@@ -1475,10 +1475,12 @@
 				macShortcut = "Control|K" />
 		<Command id = "MonoDevelop.Ide.Commands.TextEditorCommands.MoveBlockUp"
 				_label = "Move the line or highlighted selection up"
-				shortcut="Alt|Up" />
+				shortcut="Alt|Up"
+				macShortcut="Alt|Up" />
 		<Command id = "MonoDevelop.Ide.Commands.TextEditorCommands.MoveBlockDown"
 				_label = "Move the line or highlighted selection down"
-				shortcut="Alt|Down" />
+				shortcut="Alt|Down"
+				macShortcut="Alt|Down" />
 		<Command id = "MonoDevelop.Ide.Commands.TextEditorCommands.ShowParameterCompletionWindow"
 				_label = "Show Parameter List"
 				macShortcut = "Control|Shift|space"
